--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "            result = item[\"result\"]\n",
     "            item[\"text\"] = (result[\"choices\"][0] if \"choices\" in result else result)[\"message\"][\"content\"]\n",
     "            item[\"len\"] = len(item[\"text\"]) + len(prompts[item[\"prompt_id\"]][\"prompt\"])\n",
+    "            item[\"runner\"] = \"rtx-5090\" if item[\"runner\"].startswith(\"rtx-5090\") else item[\"runner\"]\n",
     "            runs.append(item)\n",
     "\n",
     "for model, verdicts in scores.items():\n",
@@ -55,8 +56,10 @@
     "\n",
     "table = table.loc[sorted(table.index, key=sort_key)]\n",
     "table = table[sorted(table.columns, key=sort_key)]\n",
+    "\n",
     "table.index = table.index.map(lambda x: names.get(x, x))\n",
     "table.columns = table.columns.map(lambda x: names.get(x, x))\n",
+    "\n",
     "table = table.applymap(lambda x: x if pd.notna(x) else \"\")\n",
     "\n",
     "table"
