--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
    "source": [
     "df[\"metric\"] = df[\"len\"] / df[\"elapsed_time\"]\n",
     "\n",
-    "df_std = df.groupby([\"runner\", \"model\"])[\"metric\"].agg([\"median\", \"std\"])\n",
-    "df_std[\"combined\"] = df_std.apply(lambda row: f\"{row['median']:.0f} (Δ{100 * row['std'] / row['median']:.0f}%)\", axis=1)\n",
+    "df_std = df.groupby([\"runner\", \"model\"])[\"metric\"].agg([\"median\", \"std\", \"count\"])\n",
+    "df_std[\"combined\"] = df_std.apply(lambda row: f\"{row['median']:.0f} c/s, Δ{100 * row['std'] / row['median']:.0f}%, {row['count']:.0f}pcs\", axis=1)\n",
     "table = df_std.reset_index().pivot(index=\"model\", columns=\"runner\", values=\"combined\")\n",
     "\n",
     "table.index.name = None\n",
