--- a/main.ipynb
+++ b/main.ipynb
@@ -37,163 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Phi-4 14B</th>\n",
-       "      <th>DeepSeek-R1 32B</th>\n",
-       "      <th>Qwen2.5 32B</th>\n",
-       "      <th>DeepSeek-R1 70B</th>\n",
-       "      <th>Llama 3.3 70B</th>\n",
-       "      <th>ChatGPT 4o</th>\n",
-       "      <th>o1-mini</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>OpenAI API</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>356</td>\n",
-       "      <td>430</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RTX 4090 24GB, 3400€</th>\n",
-       "      <td>418</td>\n",
-       "      <td>185</td>\n",
-       "      <td>200</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RTX 5090 32GB, 5600€</th>\n",
-       "      <td>607</td>\n",
-       "      <td>284</td>\n",
-       "      <td>314</td>\n",
-       "      <td>23*</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dual RTX 4090 24GB 6000€</th>\n",
-       "      <td>411</td>\n",
-       "      <td>170</td>\n",
-       "      <td>194</td>\n",
-       "      <td>91</td>\n",
-       "      <td>95</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mac M3 Max 128GB, 6250€</th>\n",
-       "      <td>136</td>\n",
-       "      <td>64</td>\n",
-       "      <td>65</td>\n",
-       "      <td>28</td>\n",
-       "      <td>29</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RTX A6000 48GB 7550€</th>\n",
-       "      <td>280</td>\n",
-       "      <td>129</td>\n",
-       "      <td>135</td>\n",
-       "      <td>66</td>\n",
-       "      <td>70</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dual RTX 5090 32GB 8100€</th>\n",
-       "      <td>579</td>\n",
-       "      <td>234</td>\n",
-       "      <td>253</td>\n",
-       "      <td>129</td>\n",
-       "      <td>136</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RTX 6000Ada 48GB 10 000€</th>\n",
-       "      <td>343</td>\n",
-       "      <td>151</td>\n",
-       "      <td>166</td>\n",
-       "      <td>78</td>\n",
-       "      <td>79</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A100 SXM4 40GB 23 000€</th>\n",
-       "      <td>405</td>\n",
-       "      <td>185</td>\n",
-       "      <td>201</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         Phi-4 14B DeepSeek-R1 32B Qwen2.5 32B  \\\n",
-       "OpenAI API                                                       \n",
-       "RTX 4090 24GB, 3400€           418             185         200   \n",
-       "RTX 5090 32GB, 5600€           607             284         314   \n",
-       "Dual RTX 4090 24GB 6000€       411             170         194   \n",
-       "Mac M3 Max 128GB, 6250€        136              64          65   \n",
-       "RTX A6000 48GB 7550€           280             129         135   \n",
-       "Dual RTX 5090 32GB 8100€       579             234         253   \n",
-       "RTX 6000Ada 48GB 10 000€       343             151         166   \n",
-       "A100 SXM4 40GB 23 000€         405             185         201   \n",
-       "\n",
-       "                         DeepSeek-R1 70B Llama 3.3 70B ChatGPT 4o o1-mini  \n",
-       "OpenAI API                                                    356     430  \n",
-       "RTX 4090 24GB, 3400€                                                       \n",
-       "RTX 5090 32GB, 5600€                 23*                                   \n",
-       "Dual RTX 4090 24GB 6000€              91            95                     \n",
-       "Mac M3 Max 128GB, 6250€               28            29                     \n",
-       "RTX A6000 48GB 7550€                  66            70                     \n",
-       "Dual RTX 5090 32GB 8100€             129           136                     \n",
-       "RTX 6000Ada 48GB 10 000€              78            79                     \n",
-       "A100 SXM4 40GB 23 000€                                                     "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"metric\"] = df[\"len\"] / df[\"elapsed_time\"]\n",
     "\n",
@@ -216,25 +62,7 @@
     "\n",
     "table = table.applymap(lambda x: x if pd.notna(x) else \"\")\n",
     "\n",
-    "table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "rtx 4090 -> бюджетно, можно гонять нормальные небольшие модели, расширяется до x2 4090\n",
-    "rtx 5090 -> лучшая моща\n",
-    "a6000 -> лучший вариант для обучения\n",
-    "\n",
-    "\n",
-    "обучать лучше в облаке за деньги\n",
-    "\n",
-    "2150 eur = видюха\n",
-    "600 eur = AMD Ryzen 9 7950X\n",
-    "800 eur = motherboard\n",
-    "120 eur = ram"
+    "print(table.to_markdown())"
    ]
   }
  ],
