--- a/main.ipynb
+++ b/main.ipynb
@@ -62,7 +62,8 @@
     "\n",
     "table = table.applymap(lambda x: x if pd.notna(x) else \"\")\n",
     "\n",
-    "print(table.to_markdown())"
+    "# print(table.to_markdown())\n",
+    "table"
    ]
   }
  ],
